--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 .header {
     display: flex;
     flex-direction: column;
+    background-color: #1F2937;
+    color: #F9FAF8;
 }
 
 .header-menu {
