--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .body {
     display: flex;
+    
 }
 
 .header {
@@ -52,9 +53,83 @@
     flex-direction: column;
 }
 
+.quote {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #E5E7EB;
+    height: fit-content;
+    font-size: 36px;
+    padding: 30px;
+}
+
+.quote .p {
+    align-items: right;
+}
+
+.name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 36px;
+    font-weight:bold;
+    padding-top: 25px;
+}
+
 .services {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 120px;
+    height: fit-content;
+    padding: 50px;
 }
+
+.fuel {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: fit-content;
+    gap: 10px;
+    text-align: center;
+}
+
+.info {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: fit-content;
+    gap: 10px;
+    text-align: center;
+}
+
+.schedule {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: fit-content;
+    gap: 10px;
+    text-align: center;
+}
+
+.fatigue {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: fit-content;
+    gap: 10px;
+    text-align: center;
+}
+
+.services button {
+    border-color: #3882F6;
+    background-color: #ffffff;
+    border-radius: 15px;
+    height: 200px;
+    width: 200px;
+    justify-content: center;
+}
+
 
 .footer {
     display: flex;
