--- a/style.css
+++ b/style.css
@@ -3,6 +3,30 @@
     
 }
 
+a {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+    color: #F9FAF8
+}
+
+a:hover {
+    text-decoration: none;
+    color: #F9FAF8
+}
+
+a:focus {
+    text-decoration: none;
+    color: #F9FAF8
+}
+
+a:hover {
+    text-decoration: none;
+    color: #F9FAF8
+}
+
 .header {
     display: flex;
     flex-direction: column;
@@ -21,7 +45,9 @@
     flex: 1;
     margin-top: auto;
     margin-bottom: auto;
-    margin-left: 40px;
+    padding-left: 250px; 
+    font-size: 24px; 
+    color: #F9FAF8;
 }
 
 .links {
@@ -30,16 +56,36 @@
     justify-content: center;
     align-items: center;
     gap: 15px;
+    padding-left: 100px;
+    
 }
 
 .header-content {
     display: flex;
+    gap: 50px;
 }
 
 .ht {
     display: flex;
     flex-direction: column;
     flex: 1;
+    width: 50px;
+    padding-left: 250px;
+    
+}
+
+.ht h1 {
+    font-size: 48px;
+    font-weight: extra-bold;
+}
+
+.ht button {
+    margin-top: 10px;
+    width: fit-content;
+    height: 35px;
+    background-color: #3882F6;
+    border-color: #3882F6;
+    border-radius: 6px;
 }
 
 .hi {
@@ -57,14 +103,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-color: #E5E7EB;
-    height: fit-content;
     font-size: 36px;
     padding: 30px;
+    height: 150px;
+    gap: 10px;
+    font-style: italic;
+    color: #1F2937;
 }
 
-.quote .p {
-    align-items: right;
+.quote-p {
+    display: flex;
+    text-align: right;
 }
 
 .name {
@@ -78,7 +129,7 @@
 
 .services {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     gap: 120px;
     height: fit-content;
@@ -92,6 +143,7 @@
     width: fit-content;
     gap: 10px;
     text-align: center;
+    width: 200px;
 }
 
 .info {
@@ -101,6 +153,7 @@
     width: fit-content;
     gap: 10px;
     text-align: center;
+    width: 200px;
 }
 
 .schedule {
@@ -110,6 +163,7 @@
     width: fit-content;
     gap: 10px;
     text-align: center;
+    width: 200px;
 }
 
 .fatigue {
@@ -119,6 +173,7 @@
     width: fit-content;
     gap: 10px;
     text-align: center;
+    width: 200px;
 }
 
 .services button {
@@ -128,16 +183,46 @@
     height: 200px;
     width: 200px;
     justify-content: center;
+    
 }
 
+.ctah {
+    display: flex;
+    background-color: #ffffff;
+    height: 350px;
+    align-items: center;
+    justify-content: center;
+}
 
-.footer {
+.call-to-action {
     display: flex;
     flex-direction: column;
-    margin-top: auto;
     justify-content: center;
     align-items: center;
     flex: 1;
     height: 150px;
+    max-width: 800px;
+    border-radius: 10px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+
+}
+
+.call-to-action button {
+    width: 95px;
+    margin-top: 15px;
+    height: 35px;
+    background-color: #3882F6;
+    border-color: #ffffff;
+    color:#F9FAF8;
+    border-radius: 6px;
+}
+
+.footer {
+    flex: 1;
+    padding: 25px;
+    height: 35px;
+    text-align: center;
     background-color: #1F2937;
+    color: #F9FAF8;
 }
